--- a/_includes/economic-gardening/action.html
+++ b/_includes/economic-gardening/action.html
@@ -1,16 +1,12 @@
 <div class="container py-5">
   <div class="jumbotron bg-indigo text-white">
-    <p class="lead">If you think this program is a good fit for your company, please
-      complete the online application. We are utilizing a secure website and all
-      information is confidential.</p>
-    <p class="lead">Deadline for submission is December 2, 2019 by close of business.
-      Awardees will be selected and announced second week of January 2020.</p>
-    <a class="btn btn-primary btn-lg" href="/application" role="button">Apply now!</a>
-    <hr class="my-4">
-    <p></p>
-    <h5>For more information about the National Center for Economic Gardening,
+    <p class="lead">If you think this program is a good fit for your company, please complete the online application. We are utilizing a secure website and all information is confidential.</p>
+      <p class="lead">Deadline for submission is December 6, 2019 by close of business. Awardees will be selected and announced second week of January 2020.</p>
+      <a class="btn btn-primary btn-lg" href="/faq" role="button">Read FAQ</a>
+      <a class="btn btn-primary btn-lg" href="/application" role="button">Apply now!</a>
+      <hr class="my-4">
+      <p></p>
+      <h5>For more information about the National Center for Economic Gardening,
       <a href="https://economicgardening.org/" class="grey-text"><u>visit their website</u></a></h5>
   </div>
 </div>
-
-<!-- Application link: -->
