--- a/_includes/economic-gardening/content.html
+++ b/_includes/economic-gardening/content.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-6 mb-3 mb-md-0">
+    <div class="col-sm-6 mb-3 mb-md-0 py-3">
       <div class="card">
         <div class="card-body">
           <p class="card-text black-text">The City is engaged in several strategic,
@@ -14,8 +14,8 @@
         </div>
       </div>
 
-      <div class="col-sm-6">
-        <div>
+      <div class="col-sm-6 py-3">
+        <div class="text-center">
           <h2>How does your garden grow?</h2>
           <p>What is Economic Gardening?  It’s a “Grow your Own” entrepreneurial
             approach to Economic Development. It’s ideal for second-stage entrepreneurs
@@ -27,6 +27,7 @@
             gardening specialist point them to new opportunities they may never
             have thought of on their own. Selected companies will have access to
             a suite of high-end, high-speed development tools.</p>
+            <a class="btn btn-indigo btn-lg" href="/application" role="button">Apply now!</a>
         </div>
       </div>
     </div>
