--- a/_includes/economic-gardening/action.html
+++ b/_includes/economic-gardening/action.html
@@ -1,7 +1,7 @@
 <div class="container py-5">
   <div class="jumbotron bg-indigo text-white">
     <p class="lead">If you think this program is a good fit for your company, please complete the online application. We are utilizing a secure website and all information is confidential.</p>
-      <p class="lead">Deadline for submission is December 6, 2019 by close of business. Awardees will be selected and announced second week of January 2020.</p>
+      <p class="lead">Deadline for submission is December 6, 2019 by close of business. Awardees will be selected and announced the second week of January 2020.</p>
       <a class="btn btn-primary btn-lg" href="https://innovatesac.org/economic-gardening/faq" role="button">Read FAQ</a>
       <a class="btn btn-primary btn-lg" href="/application" role="button">Apply now!</a>
       <hr class="my-4">
