--- a/_includes/economic-gardening/info-boxes.html
+++ b/_includes/economic-gardening/info-boxes.html
@@ -1,130 +1,140 @@
 <div class="container">
-  <!-- Card -->
-  <div class="card-deck">
-  <div class="card testimonial-card">
+  <div class="row">
 
-    <!-- Background color -->
-    <div class="card-up indigo lighten-1 mb-4"></div>
+    <!-- Card -->
+    <div class="col-md-6 d-flex">
+      <div class="card testimonial-card">
 
-    <!-- Avatar -->
-    <div class="avatar mx-auto white">
-      <img src="/img/icons/book.png" class="rounded-circle" alt="book">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
+        <!-- Background color -->
+        <div class="card-up indigo lighten-1 mb-4"></div>
+        <!-- Avatar -->
+        <div class="avatar mx-auto white">
+          <img src="/img/icons/book.png" class="rounded-circle" alt="book">
+          <div>Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
+        </div>
+
+        <!-- Content -->
+        <div class="card-body">
+          <!-- Name -->
+          <h4 class="card-title">Program Details</h4>
+          <hr>
+          <!-- Quotation -->
+          <p>We will offer this program to a select group of companies. There will be
+            two separate one-year seven-company cohorts. Companies will receive 36 hours
+            of services from the team of the National Center for Economic Gardening.
+            The best way to describe the national team is to compare them to a high-powered
+            staff on loan to the CEO for a few weeks. The specialist team consists of
+            seasoned researchers that leverage sophisticated corporate databases, GIS
+            systems, SEO and Web marketing tools that provide the CEO with information,
+            data and conclusions about key issues with which he/she is dealing.</p>
+        </div>
+      </div>
     </div>
+    <!-- Card -->
 
-    <!-- Content -->
-    <div class="card-body">
-      <!-- Name -->
-      <h4 class="card-title">Program Details</h4>
-      <hr>
-      <!-- Quotation -->
-      <p>We will offer this program to a select group of companies. There will be
-        two separate one-year seven-company cohorts. Companies will receive 36 hours
-        of services from the team of the National Center for Economic Gardening.
-        The best way to describe the national team is to compare them to a high-powered
-        staff on loan to the CEO for a few weeks. The specialist team consists of
-        seasoned researchers that leverage sophisticated corporate databases, GIS
-        systems, SEO and Web marketing tools that provide the CEO with information,
-        data and conclusions about key issues with which he/she is dealing.</p>
+    <!-- Card -->
+    <div class="col-md-6 d-flex">
+      <div class="card testimonial-card">
+
+        <!-- Background color -->
+        <div class="card-up indigo lighten-1 mb-4"></div>
+
+        <!-- Avatar -->
+        <div class="avatar mx-auto white">
+          <img src="/img/icons/analytics.png" class="rounded-circle" alt="program cost">
+          <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
+        </div>
+
+        <!-- Content -->
+        <div class="card-body">
+          <!-- Name -->
+          <h4 class="card-title">Program Cost</h4>
+          <hr>
+          <!-- Quotation -->
+          <p>The City of Sacramento will pay the $4,290 for the initial 36 hours of
+            services provided by the National Center for Economic Gardening.</p>
+          <p>Once the company completes the 36 hours, They have the option to act on
+            the findings in order to grow the business by addressing identified pain
+            points. There are costs associated with growing any business. This is where
+            the City is redefining the traditional Economic Gardening approach by offering
+            a chance for the company to apply for a one-time grant program up to $50,000
+            to implement the recommendations companies receive from engaging the National
+            Center for Economic Gardening specialist.</p>
+        </div>
+      </div>
     </div>
+    <!-- Card -->
 
-  </div>
-  <!-- Card -->
+    <!-- Card -->
+    <div class="col-md-6 d-flex">
+      <div class="card testimonial-card">
 
-  <!-- Card -->
-  <div class="card testimonial-card">
+        <!-- Background color -->
+        <div class="card-up indigo lighten-1 mb-4"></div>
 
-    <!-- Background color -->
-    <div class="card-up indigo lighten-1 mb-4"></div>
+        <!-- Avatar -->
+        <div class="avatar mx-auto white">
+          <img src="/img/icons/list.png" class="rounded-circle" alt="program deliverables">
+          <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
+        </div>
 
-    <!-- Avatar -->
-    <div class="avatar mx-auto white">
-      <img src="/img/icons/analytics.png" class="rounded-circle" alt="program cost">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
+        <!-- Content -->
+        <div class="card-body">
+          <!-- Name -->
+          <h4 class="card-title">Program Deliverables</h4>
+          <hr>
+          <!-- Quotation -->
+          <p>This program utilizes state of the art corporate tools in; Commercial Database
+            Searching, deep web, GIS, Search Engine Optimization, Listening post (consumer
+            chatter, signals of change), Network mapping (websites, LinkedIn, Twitter),
+            web marketing and other social media.</p>
+          <ul>
+            <li>Identify qualified leads by sorting contents of extensive databases</li>
+            <li>Map geographic areas using GIS software to facilitate targeted marketing efforts</li>
+            <li>Review core strategies related to commodity and/or niche markets</li>
+            <li>Examine social media utilization to connect with customers</li>
+            <li>Place your website in front of more customers using search engine optimization</li>
+            <li>Analyze employee temperament to build strong management teams</li>
+          </ul>
+        </div>
+      </div>
     </div>
+    <!-- Card -->
 
-    <!-- Content -->
-    <div class="card-body">
-      <!-- Name -->
-      <h4 class="card-title">Program Cost</h4>
-      <hr>
-      <!-- Quotation -->
-      <p>The City of Sacramento will pay the $4,290 for the initial 36 hours of
-        services provided by the National Center for Economic Gardening.</p>
-      <p>Once the company completes the 36 hours, They have the option to act on
-        the findings in order to grow the business by addressing identified pain
-        points. There are costs associated with growing any business. This is where
-        the City is redefining the traditional Economic Gardening approach by offering
-        a chance for the company to apply for a one-time grant program up to $50,000
-        to implement the recommendations companies receive from engaging the National
-        Center for Economic Gardening specialist.</p>
+    <!-- Card -->
+    <div class="col-md-6 d-flex">
+      <!-- Card -->
+      <div class="card testimonial-card">
+
+        <!-- Background color -->
+        <div class="card-up indigo lighten-1 mb-4"></div>
+
+        <!-- Avatar -->
+        <div class="avatar mx-auto white">
+          <img src="/img/icons/users.png" class="rounded-circle" alt="people">
+          <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
+        </div>
+
+        <!-- Content -->
+        <div class="card-body">
+
+          <!-- Name -->
+          <h4 class="card-title">Does your company qualify?</h4>
+          <hr>
+          <!-- Quotation -->
+          <p>To apply for this program. Your business must meet the following eligibility criteria:</p>
+          <ul>
+            <li>Be a for-profit, privately held company headquartered and operating in the City of Sacramento</li>
+            <li>Have between $1 million and $50 million in annual revenue </li>
+            <li>Employ at least 5 but no more than 99 employees (including the owner)</li>
+            <li>Demonstrate growth in employment and/or revenue for at least 2 of the past 5 years</li>
+            <li>Sells or exports to markets outside of Sacramento</li>
+          </ul>
+          <p></p>
+          <p><i>Note: Retail, restaurant establishments do not qualify for this program.</i></p>
+        </div>
+      </div>
     </div>
-
-  </div>
-  <!-- Card -->
-
-  <!-- Card -->
-  <div class="card testimonial-card">
-
-    <!-- Background color -->
-    <div class="card-up indigo lighten-1 mb-4"></div>
-
-    <!-- Avatar -->
-    <div class="avatar mx-auto white">
-      <img src="/img/icons/list.png" class="rounded-circle" alt="program deliverables">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
-    </div>
-
-    <!-- Content -->
-    <div class="card-body">
-      <!-- Name -->
-      <h4 class="card-title">Program Deliverables</h4>
-      <hr>
-      <!-- Quotation -->
-      <p>This program utilizes state of the art corporate tools in; Commercial Database
-        Searching, deep web, GIS, Search Engine Optimization, Listening post (consumer
-        chatter, signals of change), Network mapping (websites, LinkedIn, Twitter),
-        web marketing and other social media.</p>
-        <li>Identify qualified leads by sorting contents of extensive databases</li>
-        <li>Map geographic areas using GIS software to facilitate targeted marketing efforts</li>
-        <li>Review core strategies related to commodity and/or niche markets</li>
-        <li>Examine social media utilization to connect with customers</li>
-        <li>Place your website in front of more customers using search engine optimization</li>
-        <li>Analyze employee temperament to build strong management teams</li>
-    </div>
-
-  </div>
-  <!-- Card -->
-
-  <!-- Card -->
-  <div class="card testimonial-card">
-
-    <!-- Background color -->
-    <div class="card-up indigo lighten-1 mb-4"></div>
-
-    <!-- Avatar -->
-    <div class="avatar mx-auto white">
-      <img src="/img/icons/users.png" class="rounded-circle" alt="people">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"         title="Flaticon">www.flaticon.com</a></div>
-    </div>
-
-    <!-- Content -->
-    <div class="card-body">
-      <!-- Name -->
-      <h4 class="card-title">Does your company qualify?</h4>
-      <hr>
-      <!-- Quotation -->
-      <p>To apply for this program. Your business must meet the following eligibility criteria:</p>
-      <li>Be a for-profit, privately held company headquartered and operating in the City of Sacramento</li>
-      <li>Have between $1 million and $50 million in annual revenue </li>
-      <li>Employ at least 5 but no more than 99 employees (including the owner)</li>
-      <li>Demonstrate growth in employment and/or revenue for at least 2 of the past 5 years</li>
-      <li>Sells or exports to markets outside of Sacramento</li>
-      <p></p>
-      <p><i>Note: Retail, restaurant establishments do not qualify for this program.</i></p>
-    </div>
-
-  </div>
-  <!-- Card -->
+    <!-- Card -->
   </div>
 </div>
