--- a/_includes/mayors-tech-council.html
+++ b/_includes/mayors-tech-council.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="card-deck">
-                  {% for bio in site.data.mayors-tech-council %}
+                  {% for bio in site.data.tech-council %}
                   <div class="col-md-4">
 
                     <!--Card image-->
