--- a/_includes/mayors-tech-council.html
+++ b/_includes/mayors-tech-council.html
@@ -7,11 +7,10 @@
 
       <!--Featured image-->
       <div class="cover-image">
-        <img src="/img/focus-areas/{{ page.title | slugify }}.jpg" alt="{{ page.title }}">
+        <img src="/img/mayors-tech-council/mtc-banner.png" alt="{{ page.title }}">
         <div class="rgba-brown-strong">
-
-          </div>
         </div>
+      </div>
 
           <!--Content area-->
           <div class="card card-cascade wider">
