EG page updates

--- a/_includes/economic-gardening/content.html
+++ b/_includes/economic-gardening/content.html
@@ -27,7 +27,7 @@
             gardening specialist point them to new opportunities they may never
             have thought of on their own. Selected companies will have access to
             a suite of high-end, high-speed development tools.</p>
-            <a class="btn btn-indigo btn-lg" href="/application" role="button">Apply now!</a>
+            <!-- <a class="btn btn-indigo btn-lg" href="/application" role="button">Apply now!</a> -->
         </div>
       </div>
     </div>
