--- a/_includes/economic-gardening/intro.html
+++ b/_includes/economic-gardening/intro.html
@@ -14,6 +14,8 @@
       poised for growth in the City of Sacramento. The City will be partnering with
       the National Center for Economic Gardening (NCEG), a national organization
       that supports entrepreneurship.</h5>
-      <h5><b><i>Deadline for submission is December 23, 2019 by close of business.</i></b></h5>
+      <h5>For more information about the National Center for Economic Gardening,
+      <a href="https://economicgardening.org/" class="grey-text"><u>visit their website</u></a></h5>
+      <!-- <h5><b><i>Deadline for submission is December 23, 2019 by close of business.</i></b></h5> -->
   </div>
 </div>
