--- a/_layouts/economic-gardening.html
+++ b/_layouts/economic-gardening.html
@@ -5,4 +5,4 @@ layout: default
 {% include economic-gardening/intro.html %}
 {% include economic-gardening/content.html %}
 {% include economic-gardening/info-boxes.html %}
-{% include economic-gardening/action.html %}
+<!-- {% include economic-gardening/action.html %} -->
