update focus areas

--- a/_includes/focus-areas/health-it-life-sciences.html
+++ b/_includes/focus-areas/health-it-life-sciences.html
@@ -1,258 +1,81 @@
 
 <div class=card>
-<!--Section: Products v.5-->
-<section class="text-center pb-3 my-5">
-  <!--Section heading-->
-  <div class="container">
-    <!-- <h1 class="jumbotron-heading">{{ site.title }}</h1> -->
-    <div class="row">
-      <div class="col-md-6 mx-auto">
-        <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/AO7XbqI6xCg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <p class="text-center">
-          <a href="/pdf/aggie-square.pdf" class="btn btn-primary">View Working Group Report</a>
-        </p>
-      </div>
-      <div class="col-md-6 text-center text-md-left pr-md-5">
-        <h1 class="h1 py-5 text-center">Aggie Square</h1>
-        <p class="text-center">
-          Aggie Square will serve as a collaborative technology and innovation campus that leverages the university's strengths to become the catalyst
-          for economic change, creates jobs for its graduates, and hleps spur the economic vitality of the broader Sacramento region. It will serve
-          as a model public-private partnership, increasing technology transfer and creating equitable opportunities for residents in the community and
-          region.
-        </p>
-      </div>
-    </div>
-  </div>
+  <!--Section: Products v.5-->
+  <section class="pb-3 my-5">
 
-  <!--Carousel Wrapper-->
-  <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
-    <!--Controls-->
-    <div class="controls-top">
-      <a class="btn-floating primary-color waves-effect waves-light" href="#multi-item-example" data-slide="prev">
-        <i class="fa fa-chevron-left"></i>
-      </a>
-      <a class="btn-floating primary-color waves-effect waves-light" href="#multi-item-example" data-slide="next">
-        <i class="fa fa-chevron-right"></i>
-      </a>
-    </div>
-    <!--Controls-->
-    <!--Indicators-->
-    <ol class="carousel-indicators">
-      <li class="primary-color active" data-target="#multi-item-example" data-slide-to="0"></li>
-      <li class="primary-color" data-target="#multi-item-example" data-slide-to="1"></li>
-      <!-- <li class="primary-color" data-target="#multi-item-example" data-slide-to="2"></li> -->
-    </ol>
-    <!--Indicators-->
-    <!--Slides-->
-    <div class="carousel-inner" role="listbox">
-      <!--First slide-->
-      <div class="carousel-item active">
-        <div class="col-md-4">
-          <!--Card-->
-          <div class="card card-cascade narrower card-ecommerce">
-            <!--Card image-->
-            <div class="view overlay">
-              <img src="/img/uc-davis/as-logo.jpg" class="img-fluid" alt="sample photo">
-              <a>
-                <div class="mask waves-effect waves-light"></div>
-              </a>
-            </div>
-            <!--Card image-->
-            <!--Card content-->
-            <div class="card-body text-center no-padding">
-              <!--Category & Title-->
-              <h4 class="card-title my-4">
-                <strong>
-                  <a href="/img/uc-davis/as-logo.jpg">Aggie Square Logo</a>
-                </strong>
-              </h4>
-              <!--Description-->
-              <p class="card-text-black"></p>
-              <div class="card-footer">
-                <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/as-logo.jpg">
-                      <i class="fa fa-expand ml-3"></i>
-                    </a></span>
-              </div>
-            </div>
-          <!--Card-->
-          </div>
-        </div>
-        <div class="col-md-4 clearfix d-none d-md-block">
-          <div class="card card-cascade narrower card-ecommerce">
-            <!--Card image-->
-            <div class="view overlay">
-              <img src="/img/uc-davis/context-dwntwn.jpg" class="img-fluid" alt="sample photo">
-              <a>
-                <div class="mask waves-effect waves-light"></div>
-              </a>
-            </div>
-            <!--Card image-->
-            <!--Card content-->
-            <div class="card-body text-center no-padding">
-              <!--Category & Title-->
-              <h4 class="card-title my-4">
-                <strong>
-                  <a href="/img/uc-davis/context-dwntwn.jpg">UC Davis Health</a>
-                </strong>
-              </h4>
-              <!--Description-->
-              <p class="card-text">
-              </p>
-              <!--Card footer-->
-              <div class="card-footer">
-                <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/context-dwntwn.jpg">
-                      <i class="fa fa-expand ml-3"></i>
-                    </a></span>
-              </div>
+    <!--Section heading-->
+    <div class="container">
+      <div class="card-body">
+        <h1 class="page-heading text-center py-4">What's Happening in Sacramento?</h1>
+        <hr>
+
+        <div class="row pt-5">
+          <div class="col-lg-6 col-xl-5 mb-3">
+            <!--Video-->
+            <div class="embed-responsive embed-responsive-16by9 hoverable">
+              <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/AO7XbqI6xCg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
           </div>
-        </div>
-        <div class="col-md-4 clearfix d-none d-md-block">
-          <div class="card card-cascade narrower card-ecommerce">
-            <!--Card image-->
-            <div class="view overlay">
-              <img src="/img/uc-davis/context-map.jpg" class="img-fluid" alt="sample photo">
-              <a>
-                <div class="mask waves-effect waves-light"></div>
-              </a>
+
+          <!--Grid column-->
+          <div class="col-lg-6 col-xl-7 mb-3">
+            <div class="col-1 mr-1">
+              <i class="fa fa-heartbeat fa-lg blue-text"></i>
             </div>
-            <!--Card image-->
-            <!--Card content-->
-            <div class="card-body text-center no-padding">
-              <!--Category & Title-->
-              <h4 class="card-title my-4">
-                <strong>
-                  <a href="/img/uc-davis/context-map.jpg">Aggie Square Proposed Area</a>
-                </strong>
-              </h4>
-              <!--Description-->
-              <p class="card-text">
-              </p>
-              <!--Card footer-->
-              <div class="card-footer">
-                <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/context-map.jpg">
-                      <i class="fa fa-expand ml-3"></i>
-                    </a></span>
-              </div>
-            </div>
+
+          <div class="col-10">
+            <h3 class="feature-title font-bold">Aggie Square</h3>
+            <p class="grey-text">Set to open in the next few years at the UC Davis Medical Center in Sacramento, Aggie Square will be an innovation hub that brings together the region’s communities and entrepreneurs. With a new tech-enhanced meeting ground, community leaders, creatives, and business leaders will be able to foster high-tech innovation right here in Sacramento. A beacon of Sacramento’s integrated approach to urban planning, the 25-acre development will serve as a hub for state-of-the-art research facilities, incubator spaces, academic programs, and housing.</p>
+            <p class="grey-text">Aggie Square will serve as a collaborative technology and innovation campus that leverages the university's strengths to become the catalyst for economic change, creates jobs for its graduates, and helps spur the economic vitality of the broader Sacramento region. It will also serve as a model public-private partnership, increasing technology transfer and creating equitable opportunities for residents in the community and region.</p>
+            <p class="">
+              <a href="https://leadership.ucdavis.edu/aggie-square" class="btn btn-primary">Visit Website</a>
+            </p>
           </div>
         </div>
       </div>
-      <!--First slide-->
-      <!--Second slide-->
-      <div class="carousel-item">
-        <div class="col-md-4">
-          <div class="card card-cascade narrower card-ecommerce">
-            <!--Card image-->
-            <div class="view overlay">
-              <img src="/img/uc-davis/baseplan.jpg" class="img-fluid" alt="sample photo">
-              <a>
-                <div class="mask waves-effect waves-light"></div>
-              </a>
+      <hr>
+
+      {% for study in site.data.health-it-and-life-sciences %}
+
+      <!--Grid row-->
+      <div class="row pt-5">
+
+        <div class="col-lg-6 col-xl-5 mb-3">
+          <!--Image-->
+          <img src="/img/focus-areas/case-study/{{study.img}}.png" alt="{{study.title}}" class="img-fluid z-depth-2" href="{{study.website}}">
+        </div>
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 mb-3">
+
+          <!--Grid row-->
+          <div class="row mb-3">
+            <div class="col-1 mr-1">
+              <i class="fa fa-heartbeat fa-lg blue-text"></i>
             </div>
-            <!--Card image-->
-            <!--Card content-->
-            <div class="card-body text-center no-padding">
-              <!--Category & Title-->
-              <h4 class="card-title my-4">
-                <strong>
-                  <a href="/img/uc-davis/baseplan.jpg">Aggie Square Proposed Layout</a>
-                </strong>
-              </h4>
-              <!--Description-->
-              <p class="card-text">
+
+            <div class="col-10">
+              <h3 class="feature-title font-bold">{{study.project}}</h3>
+              <p class="grey-text">{{study.description}}</p>
+              <p class="">
+                <a href="{{study.website}}" class="btn btn-primary">Visit Website</a>
+                {% if {study.link} %}
+                  <a href="{{study.link}}" class="btn btn-primary">news</a>
+                {% endif %}
               </p>
-              <!--Card footer-->
-              <div class="card-footer">
-                <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/baseplan.jpg">
-                      <i class="fa fa-expand ml-3"></i>
-                    </a></span>
-              </div>
             </div>
           </div>
+          <!--Grid row-->
         </div>
-        <div class="col-md-4 clearfix d-none d-md-block">
-            <div class="card card-cascade narrower card-ecommerce">
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="/img/uc-davis/baseplan-labels.jpg" class="img-fluid" alt="sample photo">
-                <a>
-                  <div class="mask waves-effect waves-light"></div>
-                </a>
-              </div>
-              <!--Card image-->
-              <!--Card content-->
-              <div class="card-body text-center no-padding">
-                <!--Category & Title-->
-                <h4 class="card-title my-4">
-                  <strong>
-                    <a href="/img/uc-davis/baseplan-labels.jpg">Aggie Square Proposed Layout (Labled)</a>
-                  </strong>
-                </h4>
-                <!--Description-->
-                <p class="card-text">
-                </p>
-                <!--Card footer-->
-                <div class="card-footer">
-                  <span class="float-right">
-                    <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/baseplan-labels.jpg">
-                        <i class="fa fa-expand ml-3"></i>
-                      </a></span>
-                </div>
-              </div>
-            </div>
-        </div>
-        <div class="col-md-4 clearfix d-none d-md-block">
-            <div class="card card-cascade narrower card-ecommerce">
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="/img/uc-davis/birdseye.jpg" class="img-fluid" alt="sample photo">
-                <a>
-                  <div class="mask waves-effect waves-light"></div>
-                </a>
-              </div>
-              <!--Card image-->
-              <!--Card content-->
-              <div class="card-body text-center no-padding">
-                <!--Category & Title-->
-                <h4 class="card-title my-4">
-                  <strong>
-                    <a href="/img/uc-davis/birdseye.jpg">Aggie Square Bird's Eye View</a>
-                  </strong>
-                </h4>
-                <!--Description-->
-                <p class="card-text">
-                </p>
-                <!--Card footer-->
-                <div class="card-footer">
-                  <span class="float-right">
-                    <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="View Image" href="/img/uc-davis/birdseye.jpg">
-                        <i class="fa fa-expand ml-3"></i>
-                      </a></span>
-                </div>
-              </div>
-            </div>
-        </div>
+        <!--Grid column-->
+
       </div>
-      <!--Second slide-->
-      <!--Third slide-->
-      <!-- <div class="carousel-item">
-        <div class="col-md-4">
-       </div>
-        <div class="col-md-4 clearfix d-none d-md-block">
-        </div>
-        <div class="col-md-4 clearfix d-none d-md-block">
-        </div>
-      </div> -->
-      <!--Third slide-->
+      <!--Grid row-->
+      <hr>
+
+      {% endfor %}
     </div>
-    <!--Slides-->
   </div>
-  <!--Carousel Wrapper-->
 </section>
 <!--Section: Products v.5-->
 </div>
