--- a/_includes/focus-areas/food-systems.html
+++ b/_includes/focus-areas/food-systems.html
@@ -1,81 +1,57 @@
 
 <div class=card>
 <!--Section: Products v.5-->
-<section class="text-center pb-3 my-5">
+<section class="pb-3 my-5">
   <!--Section heading-->
   <div class="container">
     <!-- <h1 class="jumbotron-heading">{{ site.title }}</h1> -->
     <div class="card-body">
-      <h1 class="page-heading text-center py-4">Partners</h1>
+      <h1 class="page-heading text-center py-4">What's Happening in Sacramento?</h1>
       <hr>
-      <!--Grid row-->
-      <div class="row pt-5">
 
-          <!--Grid column-->
-          <div class="col-lg-6 col-xl-7 mb-3">
+       {% for study in site.data.food-systems %}
+       <!--Grid row-->
+       <div class="row pt-5">
+         <div class="col-lg-6 col-xl-5 mb-3">
+           <!--Image-->
+           <img src="/img/focus-areas/case-study/{{study.img}}.png" alt="{{study.title}}" class="img-fluid z-depth-2" href="{{study.website}}">
+         </div>
 
-              <!--Grid row-->
-              <div class="row mb-3">
-                  <div class="col-1 mr-1">
-                      <i class="fa fa-leaf fa-lg green-text"></i>
-                  </div>
-                  <div class="col-10">
-                      <h3 class="feature-title font-bold">The Verde Innovation Network for Entrepreneurship (The VINE)</h3>
-                      <p class="grey-text">The Verde Innovation Network for Entrepreneurship (The VINE) is a connected community of innovators and resurces in sustainable food and agriculture technology</p>
-                      <p class="">
-                        <a href="https://thevine.io/" class="btn btn-primary">Visit Website</a>
-                      </p>
-                  </div>
-              </div>
-              <!--Grid row-->
-          </div>
-          <!--Grid column-->
-          <!--Grid column-->
-          <div class="col-lg-6 col-xl-5 mb-3">
-              <!--Image-->
-              <img src="/img/partners/the-vine.png" alt="The VINE Network" class="img-fluid z-depth-2" href="https://thevine.io/">
-          </div>
-          <!--Grid column-->
-      </div>
-      <!--Grid row-->
+         <!--Grid column-->
+         <div class="col-lg-6 col-xl-7 mb-3">
 
-      <!--Grid row-->
-      <div class="row pt-5">
-        <!--Grid column-->
-        <div class="col-lg-6 col-xl-5 mb-3">
-            <!--Image-->
-            <img src="/img/partners/better-meat.png" alt="The Better Meat Co." class="img-fluid z-depth-2" href="https://www.bettermeat.co/">
-        </div>
-        <!--Grid column-->
-          <!--Grid column-->
-          <div class="col-lg-6 col-xl-7 mb-3">
+           <!--Grid row-->
+           <div class="row mb-3">
+             <div class="col-1 mr-1">
+               <i class="fa fa-cutlery fa-lg brown-text"></i>
+             </div>
 
-              <!--Grid row-->
-              <div class="row mb-3">
-                  <div class="col-1 mr-1">
-                      <i class="fa fa-cutlery fa-lg green-text"></i>
-                  </div>
-                  <div class="col-10">
-                      <h3 class="feature-title font-bold">The Better Meat Co.</h3>
-                      <p class="grey-text">Founded in early 2018 and based in Sacramento, The Better Meat Co. is a business-to-business company that helps institutional food sellers achieve their goals of culinary excellence by providing next-generation plant-based proteins for foodservice providers and meat processors to make their meat, in a word, better.</p>
-                      <p class="">
-                        <a href="/pdf/the-better-meat-co.pdf" class="btn btn-primary">View One-Pager</a>
-                        <a href="https://www.bettermeat.co" class="btn btn-primary">Visit Website</a>
-                      </p>
-                  </div>
-              </div>
-              <!--Grid row-->
-          </div>
-          <!--Grid column-->
+             <div class="col-10">
+               <h3 class="feature-title font-bold">{{study.project}}</h3>
+               <p class="grey-text">{{study.description}}</p>
+               <p class="">
+                 <a href="{{study.website}}" class="btn btn-primary">Visit Website</a>
+                 {% if {study.link} %}
+                   <a href="{{study.link}}" class="btn btn-primary">news</a>
+                 {% endif %}
+               </p>
+             </div>
+           </div>
+           <!--Grid row-->
 
-      </div>
-      <!--Grid column-->
+         </div>
+         <!--Grid column-->
 
-      <div class="excerpt">
+       </div>
+       <!--Grid row-->
+       <hr>
+      {% endfor %}
+
+      <!--div class="excerpt">
         <h4 class="feature-title text-center pt-5">Get Involved</h4>
         <p class="text-center">Interested in partnering with us? We want to know how you are working to co-develop Sacramento's innovation ecosystem</p>
         <a href="/stories" class="btn blue-gradient"><i class="fa fa-rocket"></i> Tell us your story</a>
-      </div>
+      </div-->
 
     </div>
     <!--Page content-->
