--- a/_includes/focus-areas/intro.html
+++ b/_includes/focus-areas/intro.html
@@ -1,35 +1,24 @@
-<!--Section-->
-<section class="section section-blog-fw pb-3">
-
-  <!--Grid row-->
-  <div class="row">
-    <div class="col-md-12">
-
-          <!--Featured image-->
-          <div class="cover-image">
-            <img src="/img/focus-areas/{{ page.title | slugify }}.jpg" alt="{{ page.title }}">
-            <div class="rgba-brown-strong">
-
-          </div>
+  <!-- Jumbotron -->
+  <div class="jumbotron jumbotron-fluid" style="background-image: url(/img/focus-areas/{{page.title | slugify}}.jpg);">
+    <div class="container">
+      <div class="row py-5">
+        <div class="col-md-8 offset-md-2">
+          <!-- Content -->
+          <h2 class="display-4 white-text"><i class="fa fa-{{ page.icon }}"></i> {{page.title}}</h2>
         </div>
-
-          <!--Content area-->
-          <div class="card card-cascade wider reverse">
-          <!--Page content-->
-          <div class="card-body">
-            <h1 class="page-heading text-center py-4">{{ page.title }}</h1>
-
-            <div class="excerpt">
-              {{ content }}
-            </div>
-
-          </div>
-          <!--Page content-->
-        </div>
-
+      </div>
     </div>
   </div>
-  <!--Grid row-->
+  <!-- Jumbotron -->
 
-</section>
-<!--Section-->
+  <!-- Grid row -->
+<div class="row">
+  <div class="container">
+    <div class="row py-4">
+      <div class="col-md-8 offset-md-2">
+        <p class="font-weight-heavy">{{content}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Grid row -->
