covid response page

--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -9,10 +9,17 @@
                       <hr class="hr-light mt-4 wow fadeInDown" align="left" data-wow-delay="0.4s">
                       <h3 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><i>DISCOVER.LAUNCH.SCALE</i></h3>
                       <h5 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Improving the life of all Sacramentans through data-driven testing and piloting of new technologies in real life communities and settings</strong></h5>
-                      <a href="/partner" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-rocket" aria-hidden="true"></i> Partner with Us</a>
+                      <a href="/partner" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-rocket" aria-hidden="true"></i> Become a SUTL Partner</a>
                   </div>
               </div>
           </div>
       </div>
+  </div>
+</div>
+<div class="jumbotron jumbotron-fluid amber">
+  <div class="container">
+    <h2 class="display-6">Have a solution to address a COVID-19-related problem?</h2>
+    <p class="lead">We want to hear from you!</p>
+    <a href="/covid-partner" target="_blank" class="btn btn-outline-elegant btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-key" aria-hidden="true"></i> Submit a COVID-19 Solution</a>
   </div>
 </div>
