--- a/_includes/home/main.html
+++ b/_includes/home/main.html
@@ -4,11 +4,11 @@
 
 <hr>
   <div class="embed-responsive embed-responsive-16by9">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/rS_D30E6aIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/XGSZL397PSg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<p class="text-center">
+<!--p class="text-center">
   <a href="https://www.youtube.com/embed/XGSZL397PSg" class="btn blue-gradient">Watch SUTL Intro</a>
-</p>
+</p-->
 <hr>
 
 
