update covid banner

--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -16,10 +16,14 @@
       </div>
   </div>
 </div>
-<div class="jumbotron jumbotron-fluid amber">
-  <div class="container">
-    <h2 class="display-6">Have a solution to address a COVID-19-related problem?</h2>
-    <p class="lead">We want to hear from you!</p>
-    <a href="/covid-partner" target="_blank" class="btn btn-outline-elegant btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-key" aria-hidden="true"></i> Submit a COVID-19 Solution</a>
-  </div>
+<div class="container">
+  <section class="section feature-box">
+    <div class="jumbotron jumbotron-fluid amber img-fluid" style="background-image: url(/img/covid.png);">
+      <div class="container text-right white-text">
+        <h2 class="display-6">Have a solution to address a COVID-19-related problem?</h2>
+        <p class="lead">We want to hear from you!</p>
+        <a href="/covid-partner" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-key" aria-hidden="true"></i> Submit a COVID-19 Solution</a>
+      </div>
+    </div>
+  </section>
 </div>
