--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -23,6 +23,7 @@
         <h2 class="display-6">Have a solution to address a COVID-19-related problem?</h2>
         <p class="lead">We want to hear from you!</p>
         <a href="/covid-partner" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-key" aria-hidden="true"></i> Submit a COVID-19 Solution</a>
+        <a href="/COVID-intake-dash" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-tachometer" aria-hidden="true"></i> View Submission Statistics</a>
       </div>
     </div>
   </section>
